variables scss created

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,10 @@
 @import 'reset';
+@import 'variables';
+
+#main-nav {
+    background: $deepBlue;
+}
+section h1 {
+    font-size: $sectionHeading;
+    color: $deepBlue;
+}
