main-nav styles nested

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,26 @@
 
 #main-nav {
     background: $deepBlue;
+    ul {
+        width: 100%;
+    }
+    li {
+        float: left;
+        width: 14%;
+    }
+    a {
+        color: $offWhite;
+        text-decoration: none;
+        padding: 16px;
+        display: block;
+        text-align: center;
+    }
+}//end of main-nav
+
+#main-nav ul::after {
+    content: '';
+    display: block;
+    clear: both;
 }
 section h1 {
     font-size: $sectionHeading;
