--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,10 +6,11 @@
     background: $deepBlue;
     ul {
         width: 100%;
+        @include clearFloat;
     }
     li {
         float: left;
-        width: 14%;
+        width: (100% / 6);
     }
     a {
         color: $offWhite;
@@ -17,14 +18,14 @@
         padding: 16px;
         display: block;
         text-align: center;
+        &:hover {
+            background: #333;
+            font-size: 20px;
+            border-bottom: 5px solid orangered;
+        }
     }
 }//end of main-nav
 
-#main-nav ul::after {
-    content: '';
-    display: block;
-    clear: both;
-}
 section h1 {
     font-size: $sectionHeading;
     color: $deepBlue;
@@ -40,5 +41,37 @@ section h1 {
         font-size: 20px;
         max-width: 500px;
         margin: 60px 0;
+    }
+}
+#services {
+    .wrapper {
+        margin: 20px auto;
+        display: flex;
+        justify-content: center;
+    }
+    h1 {
+        text-align: center;
+        margin-top: 10px;
+    }
+    li {
+        float:left;
+        box-sizing: border-box;
+        text-align: center;
+    }
+    img {
+        width: 60%;
+        margin: 20px 20%;
+    }
+    a {
+        text-decoration: none;
+        color: $deepBlue;
+        font-weight: bold;
+        &:hover {
+            color: orangered;
+            font-size: 17px;
+        }
+    }
+    ul {
+        @include clearFloat;
     }
 }
