--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -30,3 +30,14 @@
         clear: both;
     }
 }
+
+@mixin grid($cols, $mgn) {
+    float: left;
+    margin-right: $mgn;
+    margin-bottom: $mgn;
+    width: ((100% - (($cols - 1) * $mgn)) / $cols);
+    //to grab every last child
+    &:nth-child(#{$cols}n) {
+        margin-right: 0;
+    }
+}
