--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,9 +19,9 @@
         display: block;
         text-align: center;
         &:hover {
-            background: #333;
+            background: lighten($deepBlue, 6);
             font-size: 20px;
-            border-bottom: 5px solid orangered;
+            border-bottom: 5px solid #fff;
         }
     }
 }//end of main-nav
@@ -69,7 +69,7 @@ section h1 {
         color: $deepBlue;
         font-weight: bold;
         &:hover {
-            color: orangered;
+            color: complement($deepBlue);
             font-size: 17px;
         }
     }
@@ -78,9 +78,18 @@ section h1 {
     }
 }//end of services
 
-#projects li {
-    @include grid(4, 2%);
-    img {
-        width: 100%;
+#projects {
+    h1 {
+        text-align: center;
+        margin: 40px 0 30px 0;
+    }
+    li {
+        @include grid(4, 2%);
+        img {
+            width: 100%;
+        }
+    }
+    ul {
+        @include clearFloat;
     }
 }
