--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'variables';
 @import 'mixins';
+@import 'footer';
 
 #main-nav {
     background: $deepBlue;
@@ -11,6 +12,9 @@
     li {
         float: left;
         width: (100% / 6);
+        @include mediaQuery(600px){
+            width: 100%;
+        }
     }
     a {
         color: $offWhite;
